Fix Win/Clang components build of cc_unittests

This works around a Clang bug by moving
TileManager::ResetSignalsForTesting() out-of-line
(see bug for details).

BUG=682754
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2640153006
Cr-Commit-Position: refs/heads/master@{#444887}

Former-commit-id: d43836ab1e9e7d511128f58e0009966b1ee78ffe